content/terraform-enterprise/v1.20.3/docs/enterprise/deploy/configuration/storage/connect-database/postgres.mdx
---
page_title: Configure external PostgreSQL connection
description:
  Learn how to configure Terraform Enterprise to connect to an external
  PostgreSQL database so that your Terraform Enterprise instances can store
  stateful application data.
---

# Connect to an external PostgreSQL database

This topic describes how to configure Terraform Enterprise to connect to an
external PostgreSQL database. You only need to complete this task under the following conditions:

- You want to operate Terraform Enterprise in `active-active` or `external` mode, which instructs
Terraform Enterprise to store and retrieve data in an externally-managed database. Refer to
[Configure operational mode](/terraform/enterprise/deploy/configuration/storage/configure-mode)
for additional information.
- You want to connect to a single PostgreSQL node. To connect Terraform Enterprise to an HA PostgreSQL database cluster, refer to [Connect to a highly-available PostgreSQL cluster](/terraform/enterprise/deploy/configuration/storage/connect-database/postgres-cluster). 

## Overview

Complete the following steps to connect Terraform Enterprise to a single PostgreSQL node: 

1. Create extensions for the database schemas.
1. Specify the connection settings in your deployment configuration. If your
   server requires additional connection parameters, you must also specify them
   in the configuration.

## Requirements

Before proceeding, verify that you meet the following requirements.

### Server

One of the following servers is required:

- PostgreSQL server, such as Amazon RDS for PostgreSQL, version 13.x, 14.4
  and up, 15.x or 16.x

  <Note>
  Note that PostgreSQL v12 will reach end of life on November 12, 2024. As a
  result, Terraform Enterprise will no longer allow v12 after that date.
  </Note>

- PostgreSQL-compatible server, such as Amazon Aurora PostgreSQL.

### User

Create a PostgreSQL user with the following permissions on the database:

- Permissions to create, modify, and read all tables and indices on all schemas
  within the database. Database owners commonly have these permissions.
- Permissions to create extensions. If you are unable to create a user with the
  `CREATE EXTENSION` privilege, refer to [Create extensions](#create-extensions)
  for instructions on creating the necessary extensions.
- The `rails`, `vault`, `registry`, `task_worker`, and `terraform_enterprise` PostgreSQL schemas are required. We recommend allowing the PostgreSQL user to create schemas so that Terraform Enterprise can create them automatically. If the PostgreSQL user does not have permissions to create schemas, they must be created prior to installation.

  <Note>
  Note that if you are changing the database user, ensure the new user is the owner of all
  enum types in the database to avoid failures for any potential migrations that
  attempt to `ALTER TYPE`.
  </Note>

## Create extensions

Create extensions for the `rails`, `vault`, `registry`, and `task_worker`
PostgreSQL schemas. The database server automatically creates these schemas if
they do not already exist.

Run the following commands on the PostgreSQL server to create the extensions:

```shell-session
CREATE EXTENSION IF NOT EXISTS "hstore" WITH SCHEMA "rails";
CREATE EXTENSION IF NOT EXISTS "uuid-ossp" WITH SCHEMA "rails";
CREATE EXTENSION IF NOT EXISTS "citext" WITH SCHEMA "registry";
```

## Specify PostgreSQL connection settings

Add the following settings to your Terraform Enterprise configuration:

- Set the `TFE_DATABASE_HOST` variable to the location of your PostgreSQL
  server. Format the location as `HOST[:PORT]`, for example `db.example.com` or
  `db.example.com:5432`. Multi host connection strings are not supported.
- Set the `TFE_DATABASE_NAME` variable to the name of the database you want to
  store the data in.
- Set the `TFE_DATABASE_USER` variable to the user name you want to use to
  access the database.
- Set the `TFE_DATABASE_PASSWORD` variable to the password for the user.

Refer to
[Database settings](/terraform/enterprise/deploy/reference/configuration#database-settings)
in the configuration reference for additional information.

### Additional connection parameters

Add the `TFE_DATABASE_PARAMETERS` variable to your configuration and specify any
additional connection parameters necessary to connect to the server.

#### `sslmode`

When providing extra keyword parameters for the database connection, the
`sslmode` parameter only allows the following values:

- `require`
- `verify-full`
- `verify-ca`
- `disable`

When operating Terraform Enterprise in `external` mode, the `sslmode` parameter
is set to `require` by default. When operating Terraform Enterprise in `disk`
mode, the `sslmode` parameter is set to `disable` by default.

Terraform Enterprise provides a certificates file at
`/etc/ssl/private/terraform-enterprise/bundle.pem`, which is required by the
`verify-full` and `verify-ca` modes.

Refer to the
[PostgreSQL library documentation](https://www.postgresql.org/docs/12/libpq-ssl.html)
for additional information about using `sslmode`.

## Authentication

### Username and password authentication

You can configure Terraform Enterprise to use the database's user and password to authenticate with the server.
Set the `TFE_DATABASE_USER` and `TFE_DATABASE_PASSWORD` variable for username and password based authentication.

### Client certificate authentication

You can configure Terraform Enterprise to use PostgreSQL client certificates to authenticate with the server. When providing client certificates, the database password is not required and the `sslmode` parameter is set to `verify-full`. 
Terraform Enterprise requires PostgreSQL server certificate to use Subject Alternative Names (SANs) rather than relying solely on the legacy Common Name field.

Configure the following settings to use PostgreSQL client certificates: 

- Set the `TFE_DATABASE_USE_MTLS` variable to `true`.
- Specify the path to the CA certificate file in the `TFE_DATABASE_CA_CERT_FILE` variable.
- Specify the path to the client certificate file in the `TFE_DATABASE_CLIENT_CERT_FILE` variable.
- Specify the path to the client key in the `TFE_DATABASE_CLIENT_KEY_FILE` variable.

### Azure MSI authentication

You can use both system-assigned and user-assigned managed identities to authenticate to Azure Database for PostgreSQL flexible server.
For more information please see the [Azure documentation](https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/how-to-connect-with-managed-identity).
When using Azure MSI authentication, the database password is not required.

Configure the following settings to use Azure MSI:

- Set the `TFE_DATABASE_PASSWORDLESS_AZURE_USE_MSI` variable to `true`.
- Set the `TFE_DATABASE_PASSWORDLESS_AZURE_CLIENT_ID` to the user-assigned managed identity. Leave blank to use the system-assigned MSI.
