content/terraform-enterprise/2.0.x/docs/enterprise/deploy/configuration/storage/connect-database/postgres.mdx
---
page_title: Configure external PostgreSQL connection
description:
  Learn how to configure Terraform Enterprise to connect to an external
  PostgreSQL database so that your Terraform Enterprise instances can store
  stateful application data.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-06T19:37:05+00:00
last_modified: 2026-06-03T08:15:55.000Z
# END AUTO GENERATED METADATA
---

# Connect to an external PostgreSQL database

This topic describes how to configure Terraform Enterprise to connect to an
external PostgreSQL database. You only need to complete this task under the following conditions:

- You want to operate Terraform Enterprise in `active-active` or `external` mode, which instructs
Terraform Enterprise to store and retrieve data in an externally-managed database. Refer to
[Configure operational mode](/terraform/enterprise/deploy/configuration/storage/configure-mode)
for additional information.
- You want to connect to a single PostgreSQL node. To connect Terraform Enterprise to an HA PostgreSQL database cluster, refer to [Connect to a highly-available PostgreSQL cluster](/terraform/enterprise/deploy/configuration/storage/connect-database/postgres-cluster). 

## Overview

Complete the following steps to connect Terraform Enterprise to a single PostgreSQL node: 

1. Create extensions for the database schemas.
1. Specify the connection settings in your deployment configuration. If your
   server requires additional connection parameters, you must also specify them
   in the configuration.

## Requirements

@include 'software-compatibility-report.mdx'

### User

Create a PostgreSQL user with the following permissions on the database:

- Permissions to create extensions. If you are unable to create a user with the
  `CREATE EXTENSION` privilege, refer to [Create extensions](#create-extensions)
  for instructions on creating the necessary extensions.
- The `terraform_enterprise`, `rails`, `vault`, `task_worker`, and `registry` schemas are required. The database user must meet one of the following permission requirements:
  - The user has `CREATE` privilege on the database. Terraform Enterprise creates the required schemas automatically on startup.
  - All required schemas already exist and the user has `USAGE` and `CREATE` privileges on each schema. Terraform Enterprise does not need to create schemas in this case.

  `CREATE` privilege on the `public` schema alone is not sufficient and will cause the database startup check to fail.

  <Note>
  If you are changing the database user, ensure the new user is the owner of all
  enum types in the database to avoid failures for any potential migrations that
  attempt to `ALTER TYPE`.
  </Note>

### AWS IAM requirements

You must meet the following requirements to use [AWS IAM for authentication](#aws-iam-authentication) with AWS RDS Database for PostgreSQL:

- The IAM role must be authorized role must be able to [access the database](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.IAMDBAuth.html) from the virtual machine.
- The mapped database role must have [required permissions](#user) on the database.

### Azure Managed Identity requirements

Use Azure Managed Identity to [authenticate](#azure-msi-authentication) with Azure Database for PostgreSQL. Here are a few requirements:

- The managed identity must be able to [access the database](https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/how-to-connect-with-managed-identity) from the virtual machine.
- The managed identity must have the [required permissions](#user) on the database.

<Note>
  Terraform Enterprise does not support workload identities for authentication.
</Note>

### Google Default Credentials requirements

You must meet the following requirements to use [Google default credentials for authentication](#google-default-credentials) with SQL Database for PostgreSQL:

- The service account user must be able to [access the database](https://cloud.google.com/sql/docs/postgres/iam-authentication) from the virtual machine.
- The service account user must have the [required permissions](#user) on the database.

## Create extensions

Create extensions for the `rails`, `vault`, `registry`, and `task_worker`
PostgreSQL schemas. The database server automatically creates these schemas if
they do not already exist.

Run the following commands on the PostgreSQL server to create the extensions:

```shell-session
CREATE EXTENSION IF NOT EXISTS "hstore" WITH SCHEMA "rails";
CREATE EXTENSION IF NOT EXISTS "uuid-ossp" WITH SCHEMA "rails";
CREATE EXTENSION IF NOT EXISTS "citext" WITH SCHEMA "registry";
```

## Create extensions in a separate schema

By default, Terraform Enterprise expects PostgreSQL extensions to be available in one of these schemas `rails`, `vault`, `registry` and `task_worker`. If not found, Terraform Enterprise tries to create them in the `public` schema.
If your security posture or organizational policy requires extensions to be installed in a dedicated schema (for example, an `extensions` schema), you need to install them manually in the dedicated schema and then configure Terraform Enterprise to include that schema in the database search path.

Set the `TFE_DATABASE_EXTRA_SCHEMAS` environment variable to a comma-separated list of schema names to append to the search path. For example:

```
TFE_DATABASE_EXTRA_SCHEMAS=extensions
```

If you use a separate database for the Explorer feature and its extensions are in a different schema, set `TFE_EXPLORER_DATABASE_EXTRA_SCHEMAS` to override the Explorer search path independently. If `TFE_EXPLORER_DATABASE_EXTRA_SCHEMAS` is not set, the value of `TFE_DATABASE_EXTRA_SCHEMAS` is used for the Explorer database as well.

Refer to [Database settings](/terraform/enterprise/deploy/reference/configuration#database-settings) in the configuration reference for additional information.

## Specify PostgreSQL connection settings

Add the following settings to your Terraform Enterprise configuration:

- Set the `TFE_DATABASE_HOST` variable to the location of your PostgreSQL
  server. Format the location as `HOST[:PORT]`, for example `db.example.com` or
  `db.example.com:5432`. Multi host connection strings are not supported.
- Set the `TFE_DATABASE_NAME` variable to the name of the database you want to
  store the data in.
- Set the `TFE_DATABASE_USER` variable to the user name you want to use to
  access the database.
- Set the `TFE_DATABASE_PASSWORD` variable to the password for the user.

Refer to
[Database settings](/terraform/enterprise/deploy/reference/configuration#database-settings)
in the configuration reference for additional information.

### Additional connection parameters

Add the `TFE_DATABASE_PARAMETERS` variable to your configuration and specify any
additional connection parameters necessary to connect to the server.

#### `sslmode`

When providing extra keyword parameters for the database connection, the
`sslmode` parameter only allows the following values:

- `require`
- `verify-full`
- `verify-ca`
- `disable`

When operating Terraform Enterprise in `external` mode, the `sslmode` parameter
is set to `require` by default. When operating Terraform Enterprise in `disk`
mode, the `sslmode` parameter is set to `disable` by default.

Terraform Enterprise provides a certificates file at
`/etc/ssl/private/terraform-enterprise/bundle.pem`, which is required by the
`verify-full` and `verify-ca` modes.

Refer to the
[PostgreSQL library documentation](https://www.postgresql.org/docs/12/libpq-ssl.html)
for additional information about using `sslmode`.

## Configure authentication settings

You can use the following authentication methods so that Terraform Enterprise can communicate with the database. 

### Username and password authentication

You can configure Terraform Enterprise to use the database's user and password to authenticate with the server.
Set the `TFE_DATABASE_USER` and `TFE_DATABASE_PASSWORD` variable for username and password based authentication.

### Client certificate authentication

You can configure Terraform Enterprise to use PostgreSQL client certificates to authenticate with the server. When providing client certificates, the `sslmode` parameter is set to `verify-full`. You can optionally provide a database password together with client certificates by setting `TFE_DATABASE_PASSWORD`, but it is not required. 
Terraform Enterprise requires PostgreSQL server certificate to use Subject Alternative Names (SANs) rather than relying solely on the legacy Common Name field.

Configure the following settings to use PostgreSQL client certificates: 

- Set the `TFE_DATABASE_USE_MTLS` variable to `true`.
- Specify the path to the CA certificate file in the `TFE_DATABASE_CA_CERT_FILE` variable.
- Specify the path to the client certificate file in the `TFE_DATABASE_CLIENT_CERT_FILE` variable.
- Specify the path to the client key in the `TFE_DATABASE_CLIENT_KEY_FILE` variable.

### AWS IAM authentication

You can use AWS Identity and Access Management (IAM) to authenticate to Amazon RDS for PostgreSQL.

Refer to the [AWS documentation](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.IAMDBAuth.html) for detailed guidance on IAM database authentication.
When using IAM authentication, a database password is not required. Instead, clients generate temporary authentication tokens signed with AWS credentials.

Ensure that you meet the [requirements](#aws-iam-requirements).

Configure the following settings to use AWS IAM:

- Set the `TFE_DATABASE_PASSWORDLESS_AWS_USE_INSTANCE_PROFILE` variable to `true`.
- Set the `TFE_DATABASE_PASSWORDLESS_AWS_REGION` to the AWS region of the RDS resource.

Ensure that the IAM role has the [required permissions](#user) on the database. 
If you migrate from password-based authentication to IAM, the previous user may own the database and schemas. 
Reassign ownership or grant the necessary permissions to the IAM-authenticated database user.

### Azure MSI authentication

You can use both system-assigned and user-assigned managed identities to authenticate to Azure Database for PostgreSQL flexible server.

Refer to the [Azure documentation](https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/how-to-connect-with-managed-identity) for more information.
When using Azure MSI authentication, the database password is not required.

Ensure that you meet the [requirements](#azure-managed-identity-requirements).

Configure the following settings to use Azure MSI:

- Set the `TFE_DATABASE_PASSWORDLESS_AZURE_USE_MSI` variable to `true`.
- Set the `TFE_DATABASE_PASSWORDLESS_AZURE_CLIENT_ID` to the client ID of the user-assigned managed identity. Leave it blank to use the system-assigned managed identity.
- Set the `TFE_DATABASE_USER` to the managed identity name.

Ensure that the managed identity has the [required permissions](#user) on the database. 
If you migrate from password-based authentication to MSI, the previous user may own the database and schemas. 
Reassign ownership or grant the necessary permissions to the managed identity user.

### Google Default Credentials

Refer to the [Google documentation](https://cloud.google.com/docs/authentication/application-default-credentials#attached-sa) for more information.
The scope of the service account needs to be set to [Cloud SQL Admin API](https://developers.google.com/identity/protocols/oauth2/scopes#sqladmin).
When using Google Default Credentials, the database password is not required.

Ensure that you meet the [requirements](#google-default-credentials-requirements).

Configure the following settings to use Google Default Credentials:

- Set the `TFE_DATABASE_PASSWORDLESS_GOOGLE_USE_DEFAULT_CREDENTIALS` variable to `true`.
- Set the `TFE_DATABASE_USER` to the username portion of the service account email (the part before `.gserviceaccount.com`).

Ensure that the service account has the [required permissions](#user) on the database. 
If you migrate from password-based authentication to Google Default Credentials, the previous user may own the database and schemas. 
Reassign ownership or grant the necessary permissions to the service account.
